// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slate JSON to React transforms Element tags blockquote 1`] = `
<blockquote>
  Blockquote
</blockquote>
`;

exports[`Slate JSON to React transforms Element tags headings 1`] = `
[
  <h1>
    Heading 1
  </h1>,
  <h2>
    Heading 2
  </h2>,
  <h3>
    Heading 3
  </h3>,
  <h4>
    Heading 4
  </h4>,
  <h5>
    Heading 5
  </h5>,
  <h6>
    Heading 6
  </h6>,
]
`;

exports[`Slate JSON to React transforms Element tags link 1`] = `
<a>
  Slate Serializers | GitHub
</a>
`;

exports[`Slate JSON to React transforms Element tags nested unordered list 1`] = `
<ul>
  <li>
    Item 1
    <ul>
      <li>
        Nested item 1
      </li>
      <li>
        Nested item 2
      </li>
    </ul>
  </li>
  <li>
    Item 2
  </li>
</ul>
`;

exports[`Slate JSON to React transforms Element tags ordered list 1`] = `
<ol>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
</ol>
`;

exports[`Slate JSON to React transforms Element tags paragraph 1`] = `
<p>
  Paragraph 1
</p>
`;

exports[`Slate JSON to React transforms Element tags unordered list 1`] = `
<ul>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
</ul>
`;

exports[`Slate JSON to React transforms Text tags idiomatic text 1`] = `
<i>
  Idiomatic Text
</i>
`;

exports[`Slate JSON to React transforms Text tags pre 1`] = `
<pre>
  Pre
</pre>
`;

exports[`Slate JSON to React transforms Text tags strikethrough 1`] = `
<s>
  Strikethrough
</s>
`;

exports[`Slate JSON to React transforms Text tags strong 1`] = `
<strong>
  Bold
</strong>
`;

exports[`Slate JSON to React transforms Text tags strong and idiomatic text 1`] = `
<strong>
  Strong and Idiomatic Text
</strong>
`;

exports[`Slate JSON to React transforms Text tags strong and unarticulated annotation 1`] = `
<strong>
  Strong and Unarticulated Annotation
</strong>
`;

exports[`Slate JSON to React transforms Text tags strong in paragraph 1`] = `
<p>
  <strong>
    Bold
  </strong>
</p>
`;

exports[`Slate JSON to React transforms Text tags strong mid-sentence 1`] = `
[
  "Some ",
  <strong>
    bold text
  </strong>,
  " in a sentence.",
]
`;

exports[`Slate JSON to React transforms Text tags unarticulated annotation 1`] = `
<u>
  Unarticulated Annotation
</u>
`;
